Fixed alignment

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -61,6 +61,7 @@
 .card-category h3,
 .card-category h5 {
   letter-spacing: 0.15em;
+  text-align: center;
 }
 
 .card-category h5 {
